[gd_scene load_steps=3 format=3 uid="uid://dvvj0wordpt0u"]

[ext_resource type="Script" path="res://src/scripts/pages/title_screen.gd" id="1_680op"]
[ext_resource type="Texture2D" uid="uid://cbpxdhvy0dyht" path="res://src/assets/wood-background.jpg" id="1_wbgp3"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_680op")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wbgp3")
expand_mode = 3
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ButtonMargins" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 0

[node name="MenuButtons" type="VBoxContainer" parent="HBoxContainer/ButtonMargins"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25
alignment = 1

[node name="PlaySolo" type="Button" parent="HBoxContainer/ButtonMargins/MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Play Solo"

[node name="PlayWithFriends" type="Button" parent="HBoxContainer/ButtonMargins/MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Play With Friends"

[node name="Options" type="Button" parent="HBoxContainer/ButtonMargins/MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="Quit" type="Button" parent="HBoxContainer/ButtonMargins/MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="TitleMargins" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="TitleList" type="VBoxContainer" parent="HBoxContainer/TitleMargins"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TitleText" type="Label" parent="HBoxContainer/TitleMargins/TitleList"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 80
text = "Open Boardgame 
Framework"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Version" type="Label" parent="HBoxContainer/TitleMargins/TitleList"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 20
text = "version number"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/ButtonMargins/MenuButtons/PlaySolo" to="." method="_on_play_solo_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonMargins/MenuButtons/PlayWithFriends" to="." method="_on_play_with_friends_pressed"]
